--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
     <!-- IMPORTING JS FILES -->
     <script src="public/js/jquery/dist/jquery.min.js"></script>
     <script src="public/js/imgLiquid-min.js"></script>
+    <script src="public/js/swiper.jquery.min.js"></script>
     <script src="public/js/custom.js"></script>
     <script src="public/js/bootstrap.min.js"></script>
     <script src="public/js/owl-carousel/owl.carousel.js"></script>
 
-    <!--[if gte IE 8]>
-    <script src="https://www.oh-kay.com.br/js/html5shiv.js"></script>
-    <![endif]-->
     </head>
 
 <body>
@@ -59,9 +57,9 @@
             </a>
         </div>
 
-        <div class="col-xs-12 no-padding">
-            <img src="public/img/canvaslogo.png" style="width:55px;height:35px" class="col-xs-1 img-responsive no-padding">
-            <ul class="col-xs-11 no-padding ul-menu pull-right">
+        <div class="col-xs-12 no-padding bg-white">
+            <!-- <img src="public/img/canvaslogo.png" style="width:55px;height:35px" class="col-xs-1 img-responsive no-padding"> -->
+            <ul class="col-xs-12 no-padding ul-menu pull-right">
                 <a href="" class="no-padding">
                     <li class="col-xs-2  transition ff-lato">
                         Home
@@ -74,7 +72,7 @@
                 </a>
                 <a href="" class="no-padding">
                     <li class="col-xs-2  transition ff-lato">
-                        Você Decide
+                        Up to You
                     </li>
                 </a>
                 <a href="" class="no-padding">
@@ -158,17 +156,26 @@
         </div>
         <ul class="col-xs-12 no-padding ul-votacao"> 
             <li class="item-prod col-xs-12">
-                <div class="col-xs-4 no-padding-left">
+                <div id="foto-votacao1" class="col-xs-4 no-padding-left">
                     <img src="public/img/prod1.jpg" class="img-responsive" alt="" title="">
                 </div>
-                <div class="col-xs-8 no-padding">
+                <div id="info-votacao1" class="col-xs-8 no-padding">
                     <h3 class="col-xs-12 no-padding titulo-votacao ff-lato">Nome Nome</h3>
-                    <p class="col-xs-12 no-padding">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    <p id="texto-votacao1" class="col-xs-12 no-padding texto-votacao ff-ptsans">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <span onclick="abreTexto(1, this)" class="btn-ver-mais ff-lato">Ver mais</span>
                     <div id="owl-votacao1" class="col-xs-12 no-padding">
                         <div class="item esq">
                             <div class="imgLiquid imgLiquidFill img-votacao">
@@ -191,21 +198,30 @@
                             </div>
                         </div>
                     </div>
-                    <button class="btn btn-vote col-xs-12 ff-lato transition">VOTE</button>
+                    <button type="button" class="btn btn-vote col-xs-12 ff-lato transition" data-toggle="modal" data-target=".modal-votacao">VOTE</button>
                 </div>
-            </li>
+            </li> 
             <li class="item-prod col-xs-12">
-                <div class="col-xs-4 no-padding-left">
+                <div id="foto-votacao2" class="col-xs-4 no-padding-left">
                     <img src="public/img/prod1.jpg" class="img-responsive" alt="" title="">
                 </div>
-                <div class="col-xs-8 no-padding">
+                <div id="info-votacao2" class="col-xs-8 no-padding">
                     <h3 class="col-xs-12 no-padding titulo-votacao ff-lato">Nome Nome</h3>
-                    <p class="col-xs-12 no-padding">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    <p id="texto-votacao2" class="col-xs-12 no-padding texto-votacao ff-ptsans">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <span onclick="abreTexto(2, this)" class="btn-ver-mais ff-lato">Ver mais</span>
                     <div id="owl-votacao2" class="col-xs-12 no-padding">
                         <div class="item esq">
                             <div class="imgLiquid imgLiquidFill img-votacao">
@@ -228,21 +244,30 @@
                             </div>
                         </div>
                     </div>
-                    <button class="btn btn-vote col-xs-12 ff-lato transition">VOTE</button>
+                    <button type="button" class="btn btn-vote col-xs-12 ff-lato transition" data-toggle="modal" data-target=".modal-votacao">VOTE</button>
                 </div>
-            </li>
+            </li> 
             <li class="item-prod col-xs-12">
-                <div class="col-xs-4 no-padding-left">
-                    <img src="public/img/prod1.jpg" class="img-responsive" alt="" title="">
+                <div id="foto-votacao1" class="col-xs-4 no-padding-left">
+                    <img src="public/img/prod3.jpg" class="img-responsive" alt="" title="">
                 </div>
-                <div class="col-xs-8 no-padding">
+                <div id="info-votacao3" class="col-xs-8 no-padding">
                     <h3 class="col-xs-12 no-padding titulo-votacao ff-lato">Nome Nome</h3>
-                    <p class="col-xs-12 no-padding">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    <p id="texto-votacao3" class="col-xs-12 no-padding texto-votacao ff-ptsans">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <span onclick="abreTexto(3, this)" class="btn-ver-mais ff-lato">Ver mais</span>
                     <div id="owl-votacao3" class="col-xs-12 no-padding">
                         <div class="item esq">
                             <div class="imgLiquid imgLiquidFill img-votacao">
@@ -265,7 +290,7 @@
                             </div>
                         </div>
                     </div>
-                    <button class="btn btn-vote col-xs-12 ff-lato transition">VOTE</button>
+                    <button type="button" class="btn btn-vote col-xs-12 ff-lato transition" data-toggle="modal" data-target=".modal-votacao">VOTE</button>
                 </div>
             </li>
         </ul>
@@ -295,6 +320,15 @@
         </ul>
     </div>
 </footer>
+
+<div class="modal fade modal-votacao" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+    <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content modal-content-votacao ff-lato">
+            Obrigada por votar!
+            <button class="btn btn-fechar-votacao col-xs-12" data-dismiss="modal">Fechar</button>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
