Changed Home images

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a href="" class="ff-lato">Login</a>
                 </li>
                 <li class="col-xs-3">
-                    <a href="" class="ff-lato">Minha Conta</a>
+                    <a href="" class="ff-lato">Carrinho <i class="fa fa-shopping-cart"></i></a>
                 </li>
                 <li class="col-xs-5 no-padding-right">
                     <input class="col-xs-12 input-busca" type="text" name="busca" placeholder="buscar no site">
@@ -52,9 +52,8 @@
         </div>
 
         <div class="col-xs-12 no-padding logo-box">
-            <a href="">
-                <img src="public/img/canvaslogo.png" class="imglogo no-padding img-responsive center-block" title="Canvas Logo" alt="Canvas Logo">
-            </a>
+            <!-- <div class="detalhe-rosa col-xs-12 no-padding"></div> -->
+            <img src="public/img/canvaslogo2.png" class="imglogo no-padding img-responsive center-block" title="Canvas Logo" alt="Canvas Logo">
         </div>
 
         <div class="col-xs-12 no-padding bg-white">
@@ -62,27 +61,27 @@
             <ul class="col-xs-12 no-padding ul-menu pull-right">
                 <a href="" class="no-padding">
                     <li class="col-xs-2  transition ff-lato">
-                        Home
+                        Home 
                     </li>
                 </a>
                 <a href="" class="no-padding">
                     <li class="col-xs-2  transition ff-lato">
-                        Camisetas
+                        Camisetas 
                     </li>
                 </a>
                 <a href="" class="no-padding">
                     <li class="col-xs-2  transition ff-lato">
-                        Up to You
+                        Up to You 
                     </li>
                 </a>
                 <a href="" class="no-padding">
                     <li class="col-xs-2  transition ff-lato">
-                        Girl Gang
+                        Girl Gang <i class="fa fa-venus"></i>
                     </li>
                 </a>
                 <a href="" class="no-padding">
                     <li class="col-xs-2  transition ff-lato">
-                        Mural
+                        Mural 
                     </li>
                 </a>
                 <a href="" class="no-padding">
@@ -99,10 +98,16 @@
 
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img src="public/img/banner.png" alt="...">
+                    <img src="public/img/ban1.png" alt="...">
                 </div>
                 <div class="item">
-                    <img src="public/img/banner.png" alt="...">
+                    <img src="public/img/ban2.png" alt="...">
+                </div>
+                <div class="item">
+                    <img src="public/img/ban3.png" alt="...">
+                </div>
+                <div class="item">
+                    <img src="public/img/ban4.png" alt="...">
                 </div>
             </div>
 
@@ -125,28 +130,28 @@
             <li class="item-prod col-xs-3">
                 <div class="imgLiquid imgLiquidFill img-estampas">
                     <a href="">
-                        <img src="public/img/prod1.jpg" class="img-responsive" alt="" title="">
+                        <img src="public/img/estampa1.png" class="img-responsive" alt="" title="">
                     </a>
                 </div>
             </li>
             <li class="item-prod col-xs-3">
                 <div class="imgLiquid imgLiquidFill img-estampas">
                     <a href="">
-                        <img src="public/img/prod2.jpg" class="img-responsive" alt="" title="">
+                        <img src="public/img/estampa2.png" class="img-responsive" alt="" title="">
                     </a>
                 </div>
             </li>
             <li class="item-prod col-xs-3">
                 <div class="imgLiquid imgLiquidFill img-estampas">
                     <a href="">
-                        <img src="public/img/prod3.jpg" class="img-responsive" alt="" title="">
+                        <img src="public/img/estampa3.png" class="img-responsive" alt="" title="">
                     </a>
                 </div>
             </li>
             <li class="item-prod col-xs-3">
                 <div class="imgLiquid imgLiquidFill img-estampas">
                     <a href="">
-                        <img src="public/img/prod4.jpg" class="img-responsive" alt="" title="">
+                        <img src="public/img/estampa4.png" class="img-responsive" alt="" title="">
                     </a>
                 </div>
             </li>
