Estampas section done, header reworked

--- a/index.html
+++ b/index.html
@@ -52,12 +52,25 @@
         </div>
 
         <div class="col-xs-12 no-padding logo-box">
-            <!-- <div class="detalhe-rosa col-xs-12 no-padding"></div> -->
-            <img src="public/img/canvaslogo2.png" class="imglogo no-padding img-responsive center-block" title="Canvas Logo" alt="Canvas Logo">
+            <div class="col-xs-6 no-padding">
+                <img src="public/img/canvaslogo2.png" class="imglogo no-padding img-responsive" title="Canvas Logo" alt="Canvas Logo">
+            </div>
+            <div class="col-xs-6 no-padding redes-sociais">
+                <ul class="col-xs-12 no-padding">
+                    <li class="col-xs-12">
+                        <a href="" target="_blank"><i class="fa fa-facebook-square transition"></i></a>
+                    </li>
+                    <li class="col-xs-12">
+                        <a href="" target="_blank"><i class="fa fa-instagram transition"></i></a>
+                    </li>
+                    <li class="col-xs-12">
+                        <a href="" target="_blank"><i class="fa fa-pinterest transition"></i></a>
+                    </li>
+                </ul>
+            </div>
         </div>
 
         <div class="col-xs-12 no-padding bg-white">
-            <!-- <img src="public/img/canvaslogo.png" style="width:55px;height:35px" class="col-xs-1 img-responsive no-padding"> -->
             <ul class="col-xs-12 no-padding ul-menu pull-right">
                 <a href="" class="no-padding">
                     <li class="col-xs-2  transition ff-lato">
@@ -106,9 +119,6 @@
                 <div class="item">
                     <img src="public/img/ban3.png" alt="...">
                 </div>
-                <div class="item">
-                    <img src="public/img/ban4.png" alt="...">
-                </div>
             </div>
 
             <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
@@ -127,31 +137,31 @@
             <span class="ff-lato titulo-section">ESTAMPAS</span>
         </div>
         <ul class="col-xs-12 no-padding"> 
-            <li class="item-prod col-xs-3">
+            <li class="item-prod col-xs-3 estampas-box transition">
                 <div class="imgLiquid imgLiquidFill img-estampas">
                     <a href="">
-                        <img src="public/img/estampa1.png" class="img-responsive" alt="" title="">
+                        <img src="public/img/estampa1.jpg" class="img-responsive transition" alt="Estampa 1" title="Estampa 1">
                     </a>
                 </div>
             </li>
-            <li class="item-prod col-xs-3">
+            <li class="item-prod col-xs-3 estampas-box transition">
                 <div class="imgLiquid imgLiquidFill img-estampas">
                     <a href="">
-                        <img src="public/img/estampa2.png" class="img-responsive" alt="" title="">
+                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
                     </a>
                 </div>
             </li>
-            <li class="item-prod col-xs-3">
+            <li class="item-prod col-xs-3 estampas-box transition">
                 <div class="imgLiquid imgLiquidFill img-estampas">
                     <a href="">
-                        <img src="public/img/estampa3.png" class="img-responsive" alt="" title="">
+                        <img src="public/img/estampa3.jpg" class="img-responsive transition" alt="Estampa 3" title="Estampa 3">
                     </a>
                 </div>
             </li>
-            <li class="item-prod col-xs-3">
+            <li class="item-prod col-xs-3 estampas-box transition">
                 <div class="imgLiquid imgLiquidFill img-estampas">
                     <a href="">
-                        <img src="public/img/estampa4.png" class="img-responsive" alt="" title="">
+                        <img src="public/img/estampa4.jpg" class="img-responsive transition" alt="Estampa 4" title="Estampa 4">
                     </a>
                 </div>
             </li>
