--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
     <section class="section-home col-xs-12 no-padding">
         <div class="col-xs-12 no-padding titulo-section-box">
             <span class="ff-lato titulo-section">ESTAMPAS</span>
+            <p class="ff-lato sub-frase">Por: Henrietta Harris</p>
         </div>
         <ul class="col-xs-12 no-padding"> 
             <li class="item-prod col-xs-3 estampas-box transition">
@@ -168,6 +169,7 @@
         </ul>
         <div class="col-xs-12 no-padding titulo-section-box">
             <span class="ff-lato titulo-section">UP TO YOU</span>
+            <p class="ff-lato sub-frase">Escolha quem será a criadora da próxima coleção</p>
         </div>
         <ul class="col-xs-12 no-padding ul-votacao"> 
             <li class="item-prod col-xs-12">
@@ -315,25 +317,47 @@
 
 <footer class="col-xs-12 no-padding">
     <div class="container">
-        <h3>Footer</h3>
-        <ul class="col-xs-12 no-padding">
-            <li class="col-xs-1 no-padding">
-                <img src="public/img/canvaslogo.png" class="col-xs-12 no-padding img-responsive" alt="" title="">
-            </li>
-            <li class="col-xs-3 no-padding">
-                lorem
-            </li>
-            <li class="col-xs-3 no-padding">
-                ipsum
-            </li>
-            <li class="col-xs-3 no-padding">
-                dolor
-            </li>
-            <li class="col-xs-2 no-padding">
-                sit amet
-            </li>
-        </ul>
+        <div class="conteudo-footer col-xs-12 no-padding">
+            <div class="detalhe-cima col-xs-12 no-padding">
+                <div class="detalhe-complemento cima"></div>
+            </div>
+            
+            <img src="public/img/canvaslogo2.png" class="logo-footer no-padding img-responsive center-block" alt="Canvas Logo Footer" title="Canvas Logo Footer">
+            <ul class="col-xs-12 no-padding">
+                <a href="" class="col-xs-2 no-padding transition">
+                    <li class="ff-lato col-xs-12 no-padding">
+                        Segurança
+                    </li>
+                </a>
+                <a href="" class="col-xs-2 no-padding transition">
+                    <li class="ff-lato col-xs-12 no-padding">
+                        Pagamento
+                    </li>
+                </a>
+                <a href="" class="col-xs-3 no-padding transition">
+                    <li class="ff-lato col-xs-12 no-padding">
+                        Política de Privacidade
+                    </li>
+                </a>
+                <a href="" class="col-xs-3 no-padding transition">
+                    <li class="ff-lato col-xs-12 no-padding">
+                        Trocas e Devoluções
+                    </li>
+                </a>
+                <a href="" class="col-xs-2 no-padding transition">
+                    <li class="ff-lato col-xs-12 no-padding">
+                        Contato
+                    </li>
+                </a>
+            </ul>
+
+            <div class="detalhe-baixo col-xs-12 no-padding">
+                <div class="detalhe-complemento baixo"></div>
+            </div>
+        </div>
     </div>
+    <p class="ff-lato text-center">© Copyright 2016, Todos os direitos reservados - Canvas</p>
+    <p class="ff-lato pull-right copyright">Desenvolvido por <a href="mailto:pedrovqrocha@gmail.com">Pedro Rocha</a></p>
 </footer>
 
 <div class="modal fade modal-votacao" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
