Added new images, home complete

--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
         <ul class="col-xs-12 no-padding ul-votacao"> 
             <li class="item-prod col-xs-12">
                 <div id="foto-votacao1" class="col-xs-4 no-padding-left">
-                    <img src="public/img/prod1.jpg" class="img-responsive" alt="" title="">
+                    <img src="public/img/artista1.png" class="img-responsive" alt="" title="">
                 </div>
                 <div id="info-votacao1" class="col-xs-8 no-padding">
-                    <h3 class="col-xs-12 no-padding titulo-votacao ff-lato">Nome Nome</h3>
+                    <h3 class="col-xs-12 no-padding titulo-votacao ff-lato">Bruna Farias</h3>
                     <p id="texto-votacao1" class="col-xs-12 no-padding texto-votacao ff-ptsans">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -196,22 +196,22 @@
                     <div id="owl-votacao1" class="col-xs-12 no-padding">
                         <div class="item esq">
                             <div class="imgLiquid imgLiquidFill img-votacao">
-                                <img src="public/img/prod1.jpg" alt="Owl Image">
+                                <img src="public/img/1.1.png" alt="Owl Image">
                             </div>
                         </div>
                         <div class="item dir">
                             <div class="imgLiquid imgLiquidFill img-votacao">
-                                <img src="public/img/prod1.jpg" alt="Owl Image">
+                                <img src="public/img/1.2.png" alt="Owl Image">
                             </div>
                         </div>
                         <div class="item esq">
                             <div class="imgLiquid imgLiquidFill img-votacao">
-                                <img src="public/img/prod1.jpg" alt="Owl Image">
+                                <img src="public/img/1.3.png" alt="Owl Image">
                             </div>
                         </div>
                         <div class="item dir">
                             <div class="imgLiquid imgLiquidFill img-votacao">
-                                <img src="public/img/prod1.jpg" alt="Owl Image">
+                                <img src="public/img/1.4.png" alt="Owl Image">
                             </div>
                         </div>
                     </div>
@@ -220,10 +220,10 @@
             </li> 
             <li class="item-prod col-xs-12">
                 <div id="foto-votacao2" class="col-xs-4 no-padding-left">
-                    <img src="public/img/prod1.jpg" class="img-responsive" alt="" title="">
+                    <img src="public/img/artista2.png" class="img-responsive" alt="" title="">
                 </div>
                 <div id="info-votacao2" class="col-xs-8 no-padding">
-                    <h3 class="col-xs-12 no-padding titulo-votacao ff-lato">Nome Nome</h3>
+                    <h3 class="col-xs-12 no-padding titulo-votacao ff-lato">Anna Machado</h3>
                     <p id="texto-votacao2" class="col-xs-12 no-padding texto-votacao ff-ptsans">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -242,22 +242,22 @@
                     <div id="owl-votacao2" class="col-xs-12 no-padding">
                         <div class="item esq">
                             <div class="imgLiquid imgLiquidFill img-votacao">
-                                <img src="public/img/prod1.jpg" alt="Owl Image">
+                                <img src="public/img/2.1.png" alt="Owl Image">
                             </div>
                         </div>
                         <div class="item dir">
                             <div class="imgLiquid imgLiquidFill img-votacao">
-                                <img src="public/img/prod1.jpg" alt="Owl Image">
+                                <img src="public/img/2.2.png" alt="Owl Image">
                             </div>
                         </div>
                         <div class="item esq">
                             <div class="imgLiquid imgLiquidFill img-votacao">
-                                <img src="public/img/prod1.jpg" alt="Owl Image">
+                                <img src="public/img/2.3.png" alt="Owl Image">
                             </div>
                         </div>
                         <div class="item dir">
                             <div class="imgLiquid imgLiquidFill img-votacao">
-                                <img src="public/img/prod1.jpg" alt="Owl Image">
+                                <img src="public/img/2.4.png" alt="Owl Image">
                             </div>
                         </div>
                     </div>
@@ -266,10 +266,10 @@
             </li> 
             <li class="item-prod col-xs-12">
                 <div id="foto-votacao1" class="col-xs-4 no-padding-left">
-                    <img src="public/img/prod3.jpg" class="img-responsive" alt="" title="">
+                    <img src="public/img/artista3.png" class="img-responsive" alt="" title="">
                 </div>
                 <div id="info-votacao3" class="col-xs-8 no-padding">
-                    <h3 class="col-xs-12 no-padding titulo-votacao ff-lato">Nome Nome</h3>
+                    <h3 class="col-xs-12 no-padding titulo-votacao ff-lato">Livia Ferreira</h3>
                     <p id="texto-votacao3" class="col-xs-12 no-padding texto-votacao ff-ptsans">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -288,22 +288,22 @@
                     <div id="owl-votacao3" class="col-xs-12 no-padding">
                         <div class="item esq">
                             <div class="imgLiquid imgLiquidFill img-votacao">
-                                <img src="public/img/prod1.jpg" alt="Owl Image">
+                                <img src="public/img/3.1.png" alt="Owl Image">
                             </div>
                         </div>
                         <div class="item dir">
                             <div class="imgLiquid imgLiquidFill img-votacao">
-                                <img src="public/img/prod1.jpg" alt="Owl Image">
+                                <img src="public/img/3.2.png" alt="Owl Image">
                             </div>
                         </div>
                         <div class="item esq">
                             <div class="imgLiquid imgLiquidFill img-votacao">
-                                <img src="public/img/prod1.jpg" alt="Owl Image">
+                                <img src="public/img/3.3.png" alt="Owl Image">
                             </div>
                         </div>
                         <div class="item dir">
                             <div class="imgLiquid imgLiquidFill img-votacao">
-                                <img src="public/img/prod1.jpg" alt="Owl Image">
+                                <img src="public/img/3.4.png" alt="Owl Image">
                             </div>
                         </div>
                     </div>
