Created all view files

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <![endif]-->
 
     <meta charset="uft8">
-    <meta name="keywords" content="" />
+    <meta name="keywords" content="Camisetas, Estampas, Mulheres" />
     <meta name="revisit-after" content="2 days" />
     <meta name="page-topic" content="Home Canvas" />
-    <meta lang="pt-BR" name="Description" content="" />
+    <meta lang="pt-BR" name="Description" content="Marca de camisetas com estampas criadas por artistas mulheres." />
     <title>Home Canvas</title>
     
     <!-- IMPORTING CSS FILES -->
@@ -72,32 +72,32 @@
 
         <div class="col-xs-12 no-padding bg-white">
             <ul class="col-xs-12 no-padding ul-menu pull-right">
-                <a href="" class="no-padding">
+                <a href="index.html" class="no-padding">
                     <li class="col-xs-2  transition ff-lato">
                         Home 
                     </li>
                 </a>
-                <a href="" class="no-padding">
+                <a href="camisetas.html" class="no-padding">
                     <li class="col-xs-2  transition ff-lato">
                         Camisetas 
                     </li>
                 </a>
-                <a href="" class="no-padding">
+                <a href="uptoyou.html" class="no-padding">
                     <li class="col-xs-2  transition ff-lato">
                         Up to You 
                     </li>
                 </a>
-                <a href="" class="no-padding">
+                <a href="girlgang.html" class="no-padding">
                     <li class="col-xs-2  transition ff-lato">
                         Girl Gang <i class="fa fa-venus"></i>
                     </li>
                 </a>
-                <a href="" class="no-padding">
+                <a href="mural.html" class="no-padding">
                     <li class="col-xs-2  transition ff-lato">
                         Mural 
                     </li>
                 </a>
-                <a href="" class="no-padding">
+                <a href="sobre.html" class="no-padding">
                     <li class="col-xs-2  transition ff-lato">
                         Sobre a Canvas
                     </li>
