--- a/camisetas.html
+++ b/camisetas.html
@@ -32,7 +32,7 @@
     </head>
 
 <body>
-<div class="container view-index">
+<div class="container view-camisetas">
     <header class="col-xs-12 no-padding">
         <div class="header-firstrow col-xs-5 no-padding pull-right">
             <ul class="col-xs-12 no-padding ul-firstrow">
@@ -40,13 +40,26 @@
                     <a href="" class="ff-lato">Login</a>
                 </li>
                 <li class="col-xs-3">
-                    <a href="" class="ff-lato">Carrinho <i class="fa fa-shopping-cart"></i></a>
+                    <a href="" class="ff-lato">Sacola <i class="fa fa-shopping-bag"></i></a>
                 </li>
                 <li class="col-xs-5 no-padding-right">
                     <input class="col-xs-12 input-busca" type="text" name="busca" placeholder="buscar no site">
                 </li>
                 <li class="col-xs-1 no-padding li-lupa">
                     <i class="fa fa-search"></i>
+                </li>
+            </ul>
+        </div>
+        <div class="header-firstrow left col-xs-7 no-padding pull-left">
+            <ul class="col-xs-12 no-padding ul-firstrow">
+                <li class="col-xs-4 ff-lato vantagens">
+                    Frete Grátis <i class="fa fa-truck"></i>
+                </li>
+                <li class="col-xs-4 ff-lato vantagens">
+                    Troca Garantida <i class="fa fa-exchange"></i>
+                </li>
+                <li class="col-xs-4 ff-lato vantagens">
+                    Tamanhos Variados <i class="fa fa-tags"></i>
                 </li>
             </ul>
         </div>
@@ -106,6 +119,227 @@
         </div>
     </header>
 
+    <section class="listagem-camisetas col-xs-12 no-padding">
+        <ul class="col-xs-12 no-padding">
+            <li class="item-prod col-xs-3 transition">
+                <div class="imgLiquid imgLiquidFill img-estampas transition">
+                    <a href="">
+                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
+                    </a>
+                </div>
+                <a href="">
+                    <div class="item-info transition">
+                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
+                        <p class="truncate">Valor: 50R$</p>
+                    </div>
+                </a>
+            </li>
+            <li class="item-prod col-xs-3 transition">
+                <div class="imgLiquid imgLiquidFill img-estampas transition">
+                    <a href="">
+                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
+                    </a>
+                </div>
+                <a href="">
+                    <div class="item-info transition">
+                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
+                        <p class="truncate">Valor: 50R$</p>
+                    </div>
+                </a>
+            </li>
+            <li class="item-prod col-xs-3 transition">
+                <div class="imgLiquid imgLiquidFill img-estampas transition">
+                    <a href="">
+                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
+                    </a>
+                </div>
+                <a href="">
+                    <div class="item-info transition">
+                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
+                        <p class="truncate">Valor: 50R$</p>
+                    </div>
+                </a>
+            </li>
+            <li class="item-prod col-xs-3 transition">
+                <div class="imgLiquid imgLiquidFill img-estampas transition">
+                    <a href="">
+                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
+                    </a>
+                </div>
+                <a href="">
+                    <div class="item-info transition">
+                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
+                        <p class="truncate">Valor: 50R$</p>
+                    </div>
+                </a>
+            </li>
+
+            <div class="divisor-camisetas col-xs-12"></div>
+
+            <li class="item-prod col-xs-3 transition">
+                <div class="imgLiquid imgLiquidFill img-estampas transition">
+                    <a href="">
+                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
+                    </a>
+                </div>
+                <a href="">
+                    <div class="item-info transition">
+                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
+                        <p class="truncate">Valor: 50R$</p>
+                    </div>
+                </a>
+            </li>
+            <li class="item-prod col-xs-3 transition">
+                <div class="imgLiquid imgLiquidFill img-estampas transition">
+                    <a href="">
+                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
+                    </a>
+                </div>
+                <a href="">
+                    <div class="item-info transition">
+                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
+                        <p class="truncate">Valor: 50R$</p>
+                    </div>
+                </a>
+            </li>
+            <li class="item-prod col-xs-3 transition">
+                <div class="imgLiquid imgLiquidFill img-estampas transition">
+                    <a href="">
+                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
+                    </a>
+                </div>
+                <a href="">
+                    <div class="item-info transition">
+                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
+                        <p class="truncate">Valor: 50R$</p>
+                    </div>
+                </a>
+            </li>
+            <li class="item-prod col-xs-3 transition">
+                <div class="imgLiquid imgLiquidFill img-estampas transition">
+                    <a href="">
+                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
+                    </a>
+                </div>
+                <a href="">
+                    <div class="item-info transition">
+                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
+                        <p class="truncate">Valor: 50R$</p>
+                    </div>
+                </a>
+            </li>
+
+            <div class="divisor-camisetas col-xs-12"></div>
+
+            <li class="item-prod col-xs-3 transition">
+                <div class="imgLiquid imgLiquidFill img-estampas transition">
+                    <a href="">
+                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
+                    </a>
+                </div>
+                <a href="">
+                    <div class="item-info transition">
+                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
+                        <p class="truncate">Valor: 50R$</p>
+                    </div>
+                </a>
+            </li>
+            <li class="item-prod col-xs-3 transition">
+                <div class="imgLiquid imgLiquidFill img-estampas transition">
+                    <a href="">
+                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
+                    </a>
+                </div>
+                <a href="">
+                    <div class="item-info transition">
+                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
+                        <p class="truncate">Valor: 50R$</p>
+                    </div>
+                </a>
+            </li>
+            <li class="item-prod col-xs-3 transition">
+                <div class="imgLiquid imgLiquidFill img-estampas transition">
+                    <a href="">
+                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
+                    </a>
+                </div>
+                <a href="">
+                    <div class="item-info transition">
+                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
+                        <p class="truncate">Valor: 50R$</p>
+                    </div>
+                </a>
+            </li>
+            <li class="item-prod col-xs-3 transition">
+                <div class="imgLiquid imgLiquidFill img-estampas transition">
+                    <a href="">
+                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
+                    </a>
+                </div>
+                <a href="">
+                    <div class="item-info transition">
+                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
+                        <p class="truncate">Valor: 50R$</p>
+                    </div>
+                </a>
+            </li>
+
+            <div class="divisor-camisetas col-xs-12"></div>
+
+            <li class="item-prod col-xs-3 transition">
+                <div class="imgLiquid imgLiquidFill img-estampas transition">
+                    <a href="">
+                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
+                    </a>
+                </div>
+                <a href="">
+                    <div class="item-info transition">
+                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
+                        <p class="truncate">Valor: 50R$</p>
+                    </div>
+                </a>
+            </li>
+            <li class="item-prod col-xs-3 transition">
+                <div class="imgLiquid imgLiquidFill img-estampas transition">
+                    <a href="">
+                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
+                    </a>
+                </div>
+                <a href="">
+                    <div class="item-info transition">
+                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
+                        <p class="truncate">Valor: 50R$</p>
+                    </div>
+                </a>
+            </li>
+            <li class="item-prod col-xs-3 transition">
+                <div class="imgLiquid imgLiquidFill img-estampas transition">
+                    <a href="">
+                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
+                    </a>
+                </div>
+                <a href="">
+                    <div class="item-info transition">
+                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
+                        <p class="truncate">Valor: 50R$</p>
+                    </div>
+                </a>
+            </li>
+            <li class="item-prod col-xs-3 transition">
+                <div class="imgLiquid imgLiquidFill img-estampas transition">
+                    <a href="">
+                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
+                    </a>
+                </div>
+                <a href="">
+                    <div class="item-info transition">
+                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
+                        <p class="truncate">Valor: 50R$</p>
+                    </div>
+                </a>
+            </li>           
+        </ul>
+    </section>
  
 </div>
 
