--- a/sobre.html
+++ b/sobre.html
@@ -34,19 +34,33 @@
 <body>
 <div class="container view-index">
     <header class="col-xs-12 no-padding">
+    <header class="col-xs-12 no-padding">
         <div class="header-firstrow col-xs-5 no-padding pull-right">
             <ul class="col-xs-12 no-padding ul-firstrow">
                 <li class="col-xs-3">
                     <a href="" class="ff-lato">Login</a>
                 </li>
                 <li class="col-xs-3">
-                    <a href="" class="ff-lato">Carrinho <i class="fa fa-shopping-cart"></i></a>
+                    <a href="" class="ff-lato">Sacola <i class="fa fa-shopping-bag"></i></a>
                 </li>
                 <li class="col-xs-5 no-padding-right">
                     <input class="col-xs-12 input-busca" type="text" name="busca" placeholder="buscar no site">
                 </li>
                 <li class="col-xs-1 no-padding li-lupa">
                     <i class="fa fa-search"></i>
+                </li>
+            </ul>
+        </div>
+        <div class="header-firstrow left col-xs-7 no-padding pull-left">
+            <ul class="col-xs-12 no-padding ul-firstrow">
+                <li class="col-xs-4 ff-lato vantagens">
+                    Frete Grátis <i class="fa fa-truck"></i>
+                </li>
+                <li class="col-xs-4 ff-lato vantagens">
+                    Troca Garantida <i class="fa fa-exchange"></i>
+                </li>
+                <li class="col-xs-4 ff-lato vantagens">
+                    Tamanhos Variados <i class="fa fa-tags"></i>
                 </li>
             </ul>
         </div>
@@ -105,8 +119,6 @@
             </ul>
         </div>
     </header>
-
- 
 </div>
 
 <footer class="col-xs-12 no-padding">
