--- a/uptoyou.html
+++ b/uptoyou.html
@@ -32,7 +32,7 @@
     </head>
 
 <body>
-<div class="container view-index">
+<div class="container view-uptoyou">
     <header class="col-xs-12 no-padding">
     <header class="col-xs-12 no-padding">
         <div class="header-firstrow col-xs-5 no-padding pull-right">
@@ -119,6 +119,153 @@
             </ul>
         </div>
     </header>
+
+    <section class="uptoyou col-xs-12 no-padding">
+        <div class="col-xs-12 no-padding titulo-section-box">
+            <span class="ff-lato titulo-section">UP TO YOU</span>
+            <p class="ff-lato sub-frase">Escolha quem será a criadora da próxima coleção</p>
+        </div>
+        <ul class="col-xs-12 no-padding ul-votacao"> 
+            <li class="item-prod col-xs-12">
+                <div id="foto-votacao1" class="col-xs-4 no-padding-left">
+                    <img src="public/img/artista1.png" class="img-responsive" alt="" title="">
+                </div>
+                <div id="info-votacao1" class="col-xs-8 no-padding">
+                    <h3 class="col-xs-12 no-padding titulo-votacao ff-lato">Bruna Farias</h3>
+                    <p id="texto-votacao1" class="col-xs-12 no-padding texto-votacao ff-ptsans">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <span onclick="abreTexto(1, this)" class="btn-ver-mais ff-lato">Ver mais</span>
+                    <div id="owl-votacao1" class="col-xs-12 no-padding">
+                        <div class="item esq">
+                            <div class="imgLiquid imgLiquidFill img-votacao">
+                                <img src="public/img/1.1.png" alt="Owl Image">
+                            </div>
+                        </div>
+                        <div class="item dir">
+                            <div class="imgLiquid imgLiquidFill img-votacao">
+                                <img src="public/img/1.2.png" alt="Owl Image">
+                            </div>
+                        </div>
+                        <div class="item esq">
+                            <div class="imgLiquid imgLiquidFill img-votacao">
+                                <img src="public/img/1.3.png" alt="Owl Image">
+                            </div>
+                        </div>
+                        <div class="item dir">
+                            <div class="imgLiquid imgLiquidFill img-votacao">
+                                <img src="public/img/1.4.png" alt="Owl Image">
+                            </div>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-vote col-xs-12 ff-lato transition" data-toggle="modal" data-target=".modal-votacao">VOTE</button>
+                </div>
+            </li> 
+            <li class="item-prod col-xs-12">
+                <div id="foto-votacao2" class="col-xs-4 no-padding-left">
+                    <img src="public/img/artista2.png" class="img-responsive" alt="" title="">
+                </div>
+                <div id="info-votacao2" class="col-xs-8 no-padding">
+                    <h3 class="col-xs-12 no-padding titulo-votacao ff-lato">Anna Machado</h3>
+                    <p id="texto-votacao2" class="col-xs-12 no-padding texto-votacao ff-ptsans">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <span onclick="abreTexto(2, this)" class="btn-ver-mais ff-lato">Ver mais</span>
+                    <div id="owl-votacao2" class="col-xs-12 no-padding">
+                        <div class="item esq">
+                            <div class="imgLiquid imgLiquidFill img-votacao">
+                                <img src="public/img/2.1.png" alt="Owl Image">
+                            </div>
+                        </div>
+                        <div class="item dir">
+                            <div class="imgLiquid imgLiquidFill img-votacao">
+                                <img src="public/img/2.2.png" alt="Owl Image">
+                            </div>
+                        </div>
+                        <div class="item esq">
+                            <div class="imgLiquid imgLiquidFill img-votacao">
+                                <img src="public/img/2.3.png" alt="Owl Image">
+                            </div>
+                        </div>
+                        <div class="item dir">
+                            <div class="imgLiquid imgLiquidFill img-votacao">
+                                <img src="public/img/2.4.png" alt="Owl Image">
+                            </div>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-vote col-xs-12 ff-lato transition" data-toggle="modal" data-target=".modal-votacao">VOTE</button>
+                </div>
+            </li> 
+            <li class="item-prod col-xs-12">
+                <div id="foto-votacao1" class="col-xs-4 no-padding-left">
+                    <img src="public/img/artista3.png" class="img-responsive" alt="" title="">
+                </div>
+                <div id="info-votacao3" class="col-xs-8 no-padding">
+                    <h3 class="col-xs-12 no-padding titulo-votacao ff-lato">Livia Ferreira</h3>
+                    <p id="texto-votacao3" class="col-xs-12 no-padding texto-votacao ff-ptsans">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <span onclick="abreTexto(3, this)" class="btn-ver-mais ff-lato">Ver mais</span>
+                    <div id="owl-votacao3" class="col-xs-12 no-padding">
+                        <div class="item esq">
+                            <div class="imgLiquid imgLiquidFill img-votacao">
+                                <img src="public/img/3.1.png" alt="Owl Image">
+                            </div>
+                        </div>
+                        <div class="item dir">
+                            <div class="imgLiquid imgLiquidFill img-votacao">
+                                <img src="public/img/3.2.png" alt="Owl Image">
+                            </div>
+                        </div>
+                        <div class="item esq">
+                            <div class="imgLiquid imgLiquidFill img-votacao">
+                                <img src="public/img/3.3.png" alt="Owl Image">
+                            </div>
+                        </div>
+                        <div class="item dir">
+                            <div class="imgLiquid imgLiquidFill img-votacao">
+                                <img src="public/img/3.4.png" alt="Owl Image">
+                            </div>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-vote col-xs-12 ff-lato transition" data-toggle="modal" data-target=".modal-votacao">VOTE</button>
+                </div>
+            </li>
+        </ul>
+    </section>
 </div>
 
 <footer class="col-xs-12 no-padding">
@@ -165,6 +312,15 @@
     <p class="ff-lato text-center">© Copyright 2016, Todos os direitos reservados - Canvas</p>
     <p class="ff-lato pull-right copyright">Desenvolvido por <a href="mailto:pedrovqrocha@gmail.com">Pedro Rocha</a></p>
 </footer>
+
+<div class="modal fade modal-votacao" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+    <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content modal-content-votacao ff-lato">
+            Obrigada por votar!
+            <button class="btn btn-fechar-votacao col-xs-12" data-dismiss="modal">Fechar</button>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
