Commented CSS sections. Fixed header tag duplicate

--- a/uptoyou.html
+++ b/uptoyou.html
@@ -34,7 +34,6 @@
 <body>
 <div class="container view-uptoyou">
     <header class="col-xs-12 no-padding">
-    <header class="col-xs-12 no-padding">
         <div class="header-firstrow col-xs-5 no-padding pull-right">
             <ul class="col-xs-12 no-padding ul-firstrow">
                 <li class="col-xs-3">
@@ -120,7 +119,7 @@
         </div>
     </header>
 
-    <section class="uptoyou col-xs-12 no-padding">
+    <section class="voting-section col-xs-12 no-padding">
         <div class="col-xs-12 no-padding titulo-section-box">
             <span class="ff-lato titulo-section">UP TO YOU</span>
             <p class="ff-lato sub-frase">Escolha quem será a criadora da próxima coleção</p>
