Content-section class now handles all styling for the views

--- a/camisetas.html
+++ b/camisetas.html
@@ -117,7 +117,7 @@
         </div>
     </header>
 
-    <section class="listagem-camisetas col-xs-12 no-padding">
+    <section class="listagem-camisetas content-section col-xs-12 no-padding">
         <ul class="col-xs-12 no-padding">
             <li class="item-prod col-xs-3 transition">
                 <div class="imgLiquid imgLiquidFill img-estampas transition">
