--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
     </div>
 
-    <section class="section-home col-xs-12 no-padding">
+    <section class="section-home content-section col-xs-12 no-padding">
         <div class="col-xs-12 no-padding titulo-section-box">
             <span class="ff-lato titulo-section">ESTAMPAS</span>
             <p class="ff-lato sub-frase">Por: Henrietta Harris</p>
