--- a/uptoyou.html
+++ b/uptoyou.html
@@ -119,7 +119,7 @@
         </div>
     </header>
 
-    <section class="voting-section col-xs-12 no-padding">
+    <section class="section-votacao content-section col-xs-12 no-padding">
         <div class="col-xs-12 no-padding titulo-section-box">
             <span class="ff-lato titulo-section">UP TO YOU</span>
             <p class="ff-lato sub-frase">Escolha quem será a criadora da próxima coleção</p>
