Added OpenGraph for facebook and buy view of shirts

--- a/uptoyou.html
+++ b/uptoyou.html
@@ -13,6 +13,17 @@
     <meta lang="pt-BR" name="Description" content="Marca de camisetas com estampas criadas por artistas mulheres." />
     <title>Up To You Canvas</title>
     
+    <!-- OPEN GRAPH FACEBOOK -->
+    <meta property="og:site_name" content="Canvas" />
+    <meta property="og:title" content="You To You Canvas" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Marca de camisetas com estampas criadas por artistas mulheres." />
+    <meta property="og:url" content="pedr0rocha.github.io/canvas/uptoyou.html"/> 
+    <meta property="og:image" content="assets/img/logo.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="pt_BR" />
+    
     <!-- IMPORTING CSS FILES -->
     <link type="text/css" href="public/css/custom.css" rel="stylesheet" type="text/css">
     <link type="text/css" href="public/css/bootstrap.min.css" rel="stylesheet" type="text/css">
