--- a/camisetas.html
+++ b/camisetas.html
@@ -13,6 +13,17 @@
         <meta lang="pt-BR" name="Description" content="Marca de camisetas com estampas criadas por artistas mulheres." />
         <title>Camisetas Canvas</title>
         
+        <!-- OPEN GRAPH FACEBOOK -->
+        <meta property="og:site_name" content="Canvas" />
+        <meta property="og:title" content="Camisetas Canvas" />
+        <meta property="og:type" content="website" />
+        <meta property="og:description" content="Marca de camisetas com estampas criadas por artistas mulheres." />
+        <meta property="og:url" content="pedr0rocha.github.io/canvas/camisetas.html"/> 
+        <meta property="og:image" content="assets/img/logo.png" />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="630" />
+        <meta property="og:locale" content="pt_BR" />
+        
         <!-- IMPORTING CSS FILES -->
         <link type="text/css" href="public/css/custom.css" rel="stylesheet" type="text/css">
         <link type="text/css" href="public/css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -171,171 +182,6 @@
                     </div>
                 </a>
             </li>
-
-            <div class="divisor-camisetas col-xs-12"></div>
-
-            <li class="item-prod col-xs-3 transition">
-                <div class="imgLiquid imgLiquidFill img-estampas transition">
-                    <a href="">
-                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
-                    </a>
-                </div>
-                <a href="">
-                    <div class="item-info transition">
-                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
-                        <p class="truncate">Valor: 50R$</p>
-                    </div>
-                </a>
-            </li>
-            <li class="item-prod col-xs-3 transition">
-                <div class="imgLiquid imgLiquidFill img-estampas transition">
-                    <a href="">
-                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
-                    </a>
-                </div>
-                <a href="">
-                    <div class="item-info transition">
-                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
-                        <p class="truncate">Valor: 50R$</p>
-                    </div>
-                </a>
-            </li>
-            <li class="item-prod col-xs-3 transition">
-                <div class="imgLiquid imgLiquidFill img-estampas transition">
-                    <a href="">
-                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
-                    </a>
-                </div>
-                <a href="">
-                    <div class="item-info transition">
-                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
-                        <p class="truncate">Valor: 50R$</p>
-                    </div>
-                </a>
-            </li>
-            <li class="item-prod col-xs-3 transition">
-                <div class="imgLiquid imgLiquidFill img-estampas transition">
-                    <a href="">
-                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
-                    </a>
-                </div>
-                <a href="">
-                    <div class="item-info transition">
-                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
-                        <p class="truncate">Valor: 50R$</p>
-                    </div>
-                </a>
-            </li>
-
-            <div class="divisor-camisetas col-xs-12"></div>
-
-            <li class="item-prod col-xs-3 transition">
-                <div class="imgLiquid imgLiquidFill img-estampas transition">
-                    <a href="">
-                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
-                    </a>
-                </div>
-                <a href="">
-                    <div class="item-info transition">
-                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
-                        <p class="truncate">Valor: 50R$</p>
-                    </div>
-                </a>
-            </li>
-            <li class="item-prod col-xs-3 transition">
-                <div class="imgLiquid imgLiquidFill img-estampas transition">
-                    <a href="">
-                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
-                    </a>
-                </div>
-                <a href="">
-                    <div class="item-info transition">
-                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
-                        <p class="truncate">Valor: 50R$</p>
-                    </div>
-                </a>
-            </li>
-            <li class="item-prod col-xs-3 transition">
-                <div class="imgLiquid imgLiquidFill img-estampas transition">
-                    <a href="">
-                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
-                    </a>
-                </div>
-                <a href="">
-                    <div class="item-info transition">
-                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
-                        <p class="truncate">Valor: 50R$</p>
-                    </div>
-                </a>
-            </li>
-            <li class="item-prod col-xs-3 transition">
-                <div class="imgLiquid imgLiquidFill img-estampas transition">
-                    <a href="">
-                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
-                    </a>
-                </div>
-                <a href="">
-                    <div class="item-info transition">
-                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
-                        <p class="truncate">Valor: 50R$</p>
-                    </div>
-                </a>
-            </li>
-
-            <div class="divisor-camisetas col-xs-12"></div>
-
-            <li class="item-prod col-xs-3 transition">
-                <div class="imgLiquid imgLiquidFill img-estampas transition">
-                    <a href="">
-                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
-                    </a>
-                </div>
-                <a href="">
-                    <div class="item-info transition">
-                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
-                        <p class="truncate">Valor: 50R$</p>
-                    </div>
-                </a>
-            </li>
-            <li class="item-prod col-xs-3 transition">
-                <div class="imgLiquid imgLiquidFill img-estampas transition">
-                    <a href="">
-                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
-                    </a>
-                </div>
-                <a href="">
-                    <div class="item-info transition">
-                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
-                        <p class="truncate">Valor: 50R$</p>
-                    </div>
-                </a>
-            </li>
-            <li class="item-prod col-xs-3 transition">
-                <div class="imgLiquid imgLiquidFill img-estampas transition">
-                    <a href="">
-                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
-                    </a>
-                </div>
-                <a href="">
-                    <div class="item-info transition">
-                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
-                        <p class="truncate">Valor: 50R$</p>
-                    </div>
-                </a>
-            </li>
-            <li class="item-prod col-xs-3 transition">
-                <div class="imgLiquid imgLiquidFill img-estampas transition">
-                    <a href="">
-                        <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
-                    </a>
-                </div>
-                <a href="">
-                    <div class="item-info transition">
-                        <p class="truncate">Título Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta Camiseta</p>
-                        <p class="truncate">Valor: 50R$</p>
-                    </div>
-                </a>
-            </li>           
         </ul>
     </section>
 </div>
